deps/mquickjs-rs/tests/compile_fail/handle_cannot_escape_without_escape_api.fail.stderr
error[E0308]: mismatched types
  --> tests/compile_fail/handle_cannot_escape_without_escape_api.fail.rs:19:9
   |
19 |         h
   |         ^ expected `Escaped<'_, '_, _>`, found `Handle<'_, '_>`
   |
   = note: expected struct `Escaped<'_, '_, _>`
              found struct `Handle<'_, '_>`
